fix(view_edit_instance) : fix et changement des fonctions qui recuperent les reponses des Form par rapport a l'Id du form et l'Id de user de maniere plus correcte